[iPadOS] REGRESSION(r247667): Autosizing style changes don't invalidate RenderText's preferred logical widths https://bugs.webkit.org/show_bug.cgi?id=208084 <rdar://problem/59463898>

Reviewed by Darin Adler.

Source/WebCore:

Just use RenderElement::setStyle(), which handles all the invalidations, instead of RenderElement::setNeedsLayout().

Do a little refactoring so we don't clone RenderStyles unless we need to.

Test: fast/text-autosizing/ios/idempotentmode/viewport-change-relayout.html

* page/Page.cpp:
(WebCore::Page::recomputeTextAutoSizingInAllFrames):
* style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustmentForTextAutosizing):
(WebCore::Style::Adjuster::adjustForTextAutosizing):
* style/StyleAdjuster.h:
(WebCore::Style::Adjuster::AdjustmentForTextAutosizing::operator bool const):

LayoutTests:

* fast/text-autosizing/ios/idempotentmode/viewport-change-relayout-expected.html: Added.
* fast/text-autosizing/ios/idempotentmode/viewport-change-relayout.html: Added.

Canonical link: https://commits.webkit.org/221146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257373 268f45cc-cd09-0410-ab3c-d52691b4dbfc