Source/WebCore/rendering/style/TextSizeAdjustment.cpp
@@ -79,7 +79,7 @@ bool AutosizeStatus::probablyContainsASmallFixedNumberOfLines(const RenderStyle&
         && approximateNumberOfLines - std::floor(approximateNumberOfLines) <= thresholdForConsideringAnApproximateNumberOfLinesToBeCloseToAnInteger;
 }
 
-void AutosizeStatus::updateStatus(RenderStyle& style)
+auto AutosizeStatus::computeStatus(const RenderStyle& style) -> AutosizeStatus
 {
     auto result = style.autosizeStatus().fields();
 
@@ -113,7 +113,12 @@ void AutosizeStatus::updateStatus(RenderStyle& style)
     if (style.isFloating())
         result.add(Fields::Floating);
 
-    style.setAutosizeStatus(result);
+    return AutosizeStatus(result);
+}
+
+void AutosizeStatus::updateStatus(RenderStyle& style)
+{
+    style.setAutosizeStatus(AutosizeStatus(computeStatus(style)));
 }
 
 float AutosizeStatus::idempotentTextSize(float specifiedSize, float pageScale)
