Source/WebCore/style/StyleAdjuster.h
@@ -49,6 +49,14 @@ public:
     static void adjustAnimatedStyle(RenderStyle&, const RenderStyle* parentBoxStyle, OptionSet<AnimationImpact>);
 
 #if ENABLE(TEXT_AUTOSIZING)
+    struct AdjustmentForTextAutosizing {
+        Optional<float> newFontSize;
+        Optional<float> newLineHeight;
+        Optional<AutosizeStatus> newStatus;
+        explicit operator bool() const { return newFontSize || newLineHeight || newStatus; }
+    };
+    static AdjustmentForTextAutosizing adjustmentForTextAutosizing(const RenderStyle&, const Element&);
+    static bool adjustForTextAutosizing(RenderStyle&, const Element&, AdjustmentForTextAutosizing);
     static bool adjustForTextAutosizing(RenderStyle&, const Element&);
 #endif
 
